# comfyui-sentence-filter

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  sentence_filter_node.py  test_sentence_filter.py  tests.yml
.github/workflows/: publish.yml
